# Webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  README2.md  \  compile_commands.json  new_data.csv  socket_article.md  webserv
.cache/clangd/index/: Config.hpp.5A58A768A27B74B8.idx  Log.hpp.564FD3A8A0533837.idx  Request.hpp.1247FFBF92179B01.idx  RequestBuffer.hpp.AD29B933624D8CCD.idx  RequestHandlers.hpp.923523C7C5F19DB9.idx  Response.cpp.42E6AB6FEA36348F.idx  Response.hpp.60C6A0DE4D3BC2DA.idx  Server.cpp.58175E0FD5A00377.idx  Server.hpp.A851B44D63576864.idx  gmock-actions.h.4F026B7F64F57F3A.idx  gmock-all.cc.3DB6139587629912.idx  gmock-cardinalities.cc.7DC985B6C028E9F7.idx  gmock-cardinalities.h.AB4135E1A3F95222.idx  gmock-function-mocker.h.611FC433C5D4C29D.idx  gmock-generated-actions.h.F1DE45E17BAEEB84.idx  gmock-internal-utils.cc.6D3B9F4F3697F103.idx  gmock-internal-utils.h.D109F2C23C343E6F.idx  gmock-matchers.cc.B1DFAD5B22AD019F.idx  gmock-matchers.h.1F9C0E13674D76B5.idx  gmock-matchers.h.5904DD9A71EB68FF.idx  gmock-more-actions.h.E8CFE56FEAA8BA5B.idx  (+48 more)
exemples/: Single_cli_server.cpp  a.out  multiple_cli_server.cpp  multiple_ports.cpp  test_poll.cpp
includes/: CgiRequestHandler.hpp  Cluster.hpp  Config.hpp  Connection.hpp  Log.hpp  Parser.hpp  Request.hpp  RequestBuffer.hpp  RequestHandlers.hpp  Response.hpp  Server.hpp  UserSession.hpp  utils.hpp
resources/: form.html  form2.html  index.html  okresponse.html
resources/cgi-bin/: endless.cgi  exemple.cpp  test.cgi  test.py  test.sh
resources/config/: config1.conf  default.conf  multiple_servers.conf  twin_servers.conf  virtual_servers.conf  wrong.conf
resources/errors/: 400.html  403.html  404.html  405.html  413.html  500.html  504.html
resources/html/: cgi_handler.html  form.html  form2.html  http_protocol.html  logging.html  request_handling.html  server_architecture.html  socket.html
sources/: CgiRequestHandler.cpp  CgiTools.cpp  Cluster.cpp  Config.cpp  Connection.cpp  Log.cpp  Parser.cpp  Request.cpp  RequestBuffer.cpp  RequestHandlers.cpp  Response.cpp  Server.cpp  ServerTools.cpp  Tools.cpp  main.cpp  signal.cpp
test/: CMakeLists.txt  Connection_test.cpp  Parser_test.cpp  Response_test.cpp  request_test.cpp  test.cpp
uploads/: test.txt
www/cgi-bin/: bar_chart.cgi  currency_converter.cgi  feedback.py  graph.cgi  infinity.cgi  server_stats.sh  test.py  test.sh  test_post.py
www/html/: cgi_handler.html  delete.html  deleteresponse.html  http_protocol.html  index.html  logging.html  okresponse.html  request_handling.html  server_architecture.html  socket.html  upload.html
(+15 files in other folders)
